# genetic-algo-dino-game

./: AGENTS.md  CONTEXT.md  README.md  main.py  opencode.jsonc  presets.json  pyproject.toml
.scratch/: spec-diversity.md  spec-end-reason.md  spec-export.md  spec-gen-compare.md  spec-ghost-brains.md  spec-jump-vis.md  spec-live-view.md  spec-narrated.md  spec-never-jumped.md  spec-obstacle-seed.md  spec-preset-compare.md  spec-presets.md  spec-pterodactyl.md  spec-tutorial.md
dashboard/: charts.py  window.py
docs/adr/: 0001-he-init-population.md  0002-invert-diversity-driven-adaptation.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/configs/: game.md  genetic-algorithm.md  neural-network.md
ga/: engine.py  evolution.py  narrator.py
game/: brain.py  config.py  config_menu.py  config_screen.py  dino.py  geometry.py  ground.py  loop.py  obstacle.py  pixel_sprites.py  presets.py  runner.py  session.py  simulation.py  sprites.py
nn/: network.py
replay/: logger.py  player.py
tests/: test_brain.py  test_compare.py  test_config.py  test_config_menu.py  test_dashboard.py  test_dino.py  test_docs_config.py  test_evolution.py  test_ga.py  test_geometry.py  test_ground.py  test_integration.py  test_loop.py  test_nn.py  test_obstacle.py  test_presets.py  test_replay.py  test_runner.py  test_session.py  test_simulation.py  test_sprites.py
