[project]
name = "genetic-algo-dino-game"
version = "0.1.0"
description = "A replica of the Google Chrome Dino Game demonstrating a genetic algorithm in action"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
